--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   color: #8d8d83;
-  background-color:#abab91;
+  background-color: #b4b498;
   font-family: "Gabriola","cambria", "helvetica", "Times New Roman";
   border-style: double;
   border-color: #92948b;
