--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   color: #8d8d83;
   background-color: #C0C0C0;
-  font-family: "Gabriola","cambria", "helvetica", "Times New Roman";
+  font-family: "cambria", "helvetica", "Times New Roman";
   border-style: double;
   border-color: #92948b;
   border-width: 5px;
