--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body {
   color: #8d8d83;
   background-color: #C0C0C0;
-  font-family: "cambria", "helvetica", "Times New Roman";
+  font-family: "gabriola", "cambria", "helvetica", "Times New Roman";
   border-style: double;
   border-color: #92948b;
   border-width: 5px;
 }
+
+//colors to consider lavander:#a89ab6 light green:#abdd85
 
 h1 {
   text-decoration: underline;
