--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  color: #f88699;
+  color: #000000;
   background-color: #C0C0C0;
   font-family: "gabriola", "cambria", "helvetica", "Times New Roman";
   border-style: double;
