--- a/style.css
+++ b/style.css
@@ -41,6 +41,13 @@ a {
   width: 40%;
 }
 
+table.about th {
+  background-color: #f88699;
+  color: white;
+}  
+tr:nth-child(even) {background-color: #f9a7b5}
+
+
 /**
  * Top Bar
  */
