--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ ul.topnav li a {
     font-size: 25px;
 }
 
-ul.topnav li a:hover {background-color: #f88699;}
+ul.topnav li a:hover {background-color: #fccfd6;}
 
 ul.topnav li.icon {display: none;}
 
