--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ ul#navigation {
     border-width: 1px 0;    
     text-align: center;
     font-size: 20px;
-    font-family: "Gabriola",helvetica, "Times New Roman";
+    font-family: "Gabriola","cambria", "helvetica", "Times New Roman";
     color: #f88699;
     background-color: #FFF;
 }
