--- a/style.css
+++ b/style.css
@@ -43,10 +43,10 @@ a {
 }
 
 table.about th {
-  background-color: #f88699;
+  background-color: #fccfd6;
   color: white;
 }  
-table.about tr:nth-child(odd) {background-color: #f88699}
+table.about tr:nth-child(odd) {background-color: #fccfd6}
 table.about tr:nth-child(even) {background-color: white}
  
 /**
