--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 h1 {
   text-decoration: underline;
   text-decoration: overline;
-  border-style: double
+  border-style: double;
 }
 
 table {
