--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ ul#navigation li.last {
 
 
 ul#navigation {
- background-color: #92948b;
+ background-color: #ff03db;
  position: fixed;
  bottom: 0;
  left:0;
