--- a/style.css
+++ b/style.css
@@ -33,11 +33,15 @@ a {
  */
 
 ul.topnav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #92948b;
+ list-style-type: none;
+ margin: 0;
+ padding: 0;
+ overflow: hidden;
+ background-color: #ff03db;
+ position: fixed;
+ bottom: 0;
+ left:0;
+ width: 100%;;
 }
 
 ul.topnav li {float: left;}
@@ -82,21 +86,19 @@ ul.topnav li.icon {display: none;}
   }
 }
 
-
-
 ul#navigation {
     height: 30px;
-    list-style: none;
-    margin: 0;
-    padding: 0;
     padding-right: 10px;
     border: 1px solid #ccc;
     border-width: 1px 0;    
     text-align: center;
     font-size: 20px;
     font-family: "Gabriola","cambria", "helvetica", "Times New Roman";
-    color: #f88699;
-    background-color: #FFF;
+    background-color: #ff03db;
+    position: fixed;
+    bottom: 0;
+    left:0;
+    width: 100%;
 }
 ul#navigation li {
     display: inline;
@@ -110,14 +112,6 @@ ul#navigation li.last {
     margin-left: 0;
 }
 
-
-ul#navigation {
- background-color: #ff03db;
- position: fixed;
- bottom: 0;
- left:0;
- width: 100%;
-}
 table.pictures {
   border: 0px;
   margin-right: 50px;
