--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   color: #000000;
-  background-color: #d8d8d8;
+  background-color: #fdfdfd;
   font-family: "gabriola", "cambria", "helvetica", "Times New Roman";
 }
 
