--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ ul.topnav {
  position: fixed;
  bottom: 0;
  left:0;
- width: 100%;;
+ width: 100%;
 }
 
 ul.topnav li {float: center;}
@@ -87,6 +87,9 @@ ul.topnav li.icon {display: none;}
 }
 
 ul#navigation {
+    list-style: none;
+    margin: 0;
+    padding: 0;
     height: 30px;
     padding-right: 10px;
     border: 1px solid #ccc;
