--- a/style.css
+++ b/style.css
@@ -92,8 +92,8 @@ ul#navigation {
     border: 1px solid #ccc;
     border-width: 1px 0;    
     text-align: center;
-    font-size: 20px;
-    font-family: "Gabriola","cambria", "helvetica", "Times New Roman";
+    font-size: 15px;
+    font-family: "cambria", "helvetica", "Times New Roman";
     color: #f88699;
     background-color: #FFF;
 }
