--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ body {
 }
 
 h1 {
-
+  color: #000000;
+  border-style: double;
+  border-width: 5px;
 }
 
 table {
@@ -26,96 +28,6 @@ a {
 }
 
  
-/**
- * Top Bar
- */
-
-ul.topnav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #c4c4c4;
-}
-
-ul.topnav li {float: none;}
-
-ul.topnav li a {
-    display: inline-block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 20px 22px;
-    text-decoration: none;
-    transition: 0.3s;
-    font-size: 20px;
-}
-
-ul.topnav li a:hover {background-color: #00ADEF;}
-
-ul.topnav li.icon {display: none;}
-
-
-@media screen and (max-width:680px) {
-  ul.topnav li:not(:first-child) {display: none;}
-  ul.topnav li.icon {
-    float: right;
-    display: inline-block;
-  }
-}
-
-@media screen and (max-width:680px) {
-  ul.topnav.responsive {position: relative;}
-  ul.topnav.responsive li.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  ul.topnav.responsive li {
-    float: none;
-    display: inline;
-  }
-  ul.topnav.responsive li a {
-    display: block;
-    text-align: left;
-  }
-}
-
-
-
-ul#navigation {
-    height: 30px;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    padding-right: 10px;
-    border: 1px solid #ccc;
-    border-width: 1px 0;    
-    text-align: center;
-    font-size: 20px;
-    font-family: "cambria", "helvetica", "Times New Roman";
-    color: #f88699;
-    background-color: #FFF;
-}
-ul#navigation li {
-    display: inline;
-    margin-right: .75em;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-ul#navigation li.last {
-    margin-right: 0;
-    margin-left: 0;
-}
-
-
-ul#navigation {
- background-color: #ff03db;
- position: fixed;
- bottom: 0;
- left:0;
- width: 100%;
-}
 table.pictures {
   border: 0px;
   margin-right: 50px;
