--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ h1 {
   border-color: #00ADEF;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 table {
   font-weight: bold;
   border-style:double;
