--- a/style.css
+++ b/style.css
@@ -22,7 +22,10 @@ j {
 
 .center {
   text-align: center;
- 
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 table {
